# mgi-pulse

./: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  V01_REVIEW.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_format.md
.github/workflows/: ci.yml  release.yml
bench/: gen-ndjson-bursty.sh  gen-ndjson.sh
bench/parse-bench/: BENCH.md  Cargo.toml
bench/parse-bench/src/: main.rs
docs/adr/: 0001-no-async-runtime.md  0002-mmap-vs-stream.md  0003-follow-two-paths.md  0004-format-detection.md  README.md
mgi-pulse-core/: Cargo.toml
mgi-pulse-core/src/: lib.rs
mgi-pulse-core/src/engine/: dsl.rs  format.rs  histogram.rs  indexer.rs  indexes.rs  mod.rs  parse.rs  parse_access.rs  parse_csv.rs  parse_edn.rs  parse_journalctl.rs  parse_logback.rs  parse_logfmt.rs  parse_python.rs  parse_regex.rs  parse_syslog.rs  predicate.rs  query.rs  record.rs  stats.rs
mgi-pulse-core/src/io/: compressed.rs  file.rs  json_array.rs  merge.rs  mod.rs  multiline.rs  stream.rs  tail.rs
mgi-pulse-core/src/schema/: mod.rs
pulse-tui/: Cargo.toml
pulse-tui/src/: bookmarks_store.rs  main.rs  theme.rs
pulse-tui/src/app/: mod.rs
pulse-tui/src/panes/: detail.rs  mod.rs  stats.rs  table.rs  timeline.rs
pulse-tui/tests/: cli.rs
pulse-tui/tests/fixtures/: clojure.edn  data.csv  ecs.ndjson  mixed-timed.ndjson  structured.ndjson
