[package]
name = "mgi-pulse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TUI log navigator for local NDJSON files: not browse logs, navigate them"
readme = "../README.md"
keywords = ["log", "tui", "viewer", "ndjson"]
categories = ["command-line-utilities"]

[[bin]]
name = "mgi-pulse"
path = "src/main.rs"

[dependencies]
mgi-pulse-core = { path = "../mgi-pulse-core" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
